@@ -45,7 +45,9 @@
 
 .. method:: ODEDynamics.add(objects, categorybits=None, collidebits=None)
 
-   Add world objects to the simulation. *objects* can be a single object or a
+   Add world objects to the simulation. 
+   
+   *objects* can be a single object or a
    sequence of objects. An object may be specified by its name or the object
    itself. *categorybits* and *collidebits* are long values that control which
    objects can collide with which other object. The specified category and collide
@@ -53,7 +55,42 @@
    represents one category the objects belong to. *collidebits* is another bit
    field that specifies with which categories the objects may collide. By default,
    every bit is set in both values.
+   
+   Objects without *mass* explicitely set will use the default value *mass=1*.
 
+   After adding an object to the simulation, you will not be able to control the
+   position of the object using *pos* and *rot*. Instead, you will have to use
+   an :class:`ODEBodyManipulator` object.
+   
+   For convenience, when adding a world object to ``ODEDynamics``, it will receive a ``manip`` field representing its
+   :class:`ODEBodyManipulator`. 
+   
+   Example::
+   
+       odeSim = ODEDynamics()
+       s = Sphere()
+       s.manip.setPos(0,0,1)
+       s.manip.setRot(mat3(1).rotation(pi/2, (0,0,1)))
+       s.manip.addForce((0,0,1))
+   
+
+.. method:: ODEDynamics.remove(objects)
+
+   Remove world objects from the simulation. The objects remain on the scene (they are still rendered, 
+   but do not interact any more with the other bodies).
+   
+   *objects* can be a single object or a sequence of objects. An object may be specified by 
+   its name or the object itself. 
+   
+   .. note::
+
+      If you have used references to some object's :attr:`odebody` or :attr:`odegeoms[i]`, 
+      you have to delete them manually before calling ``ODEDynamics.remove(...)``. 
+      Otherwise, PyODE will NOT remove the object from the simulation.
+   
+   
+   
+   
 
 .. method:: ODEDynamics.reset()
 
@@ -68,7 +105,10 @@
    :class:`Material` objects and props is a :class:`ODEContactProperties` object
    describing the contact properties.
 
-
+   After calling :meth:`setContactProperties`, collision events between two bodies,
+   with their materials being *(mat1, mat2)*, will always occur in this order. Therefore, the contact normal and `fdir1` will be
+   always in the same direction.
+   
 .. method:: ODEDynamics.getContactProperties((mat1, mat2))
 
    Return the contact properties for a material pair. The order of the materials is
@@ -81,6 +121,15 @@
 
    Return an :class:`ODEBodyManipulator` object that can be used to apply external
    forces/torques to the world object *object*.
+
+.. attribute:: ODEDynamics.world
+
+    This attribute exposes the PyODE World object. You may use it for setting
+    advanced simulation parameters.
+    
+    ODE World functions: <http://opende.sourceforge.net/wiki/index.php/Manual_(World)>
+    
+    PyODE World API: <http://pyode.sourceforge.net/api-1.2.0/public/ode.World-class.html>
 
 .. note::
 
@@ -100,8 +149,7 @@ used when two objects collide.
 
 .. class:: ODEContactProperties(mode = 0, mu = 0.3, mu2 = None, bounce = None, bounce_vel = None, soft_erp = None, soft_cfm = None, motion1 = None, motion2 = None, slip1 = None, slip2 = None, fdir1 = None)
 
-   See the ODE manual (chapter  `7.3.7 Contact <http://ode.org/ode-latest-
-   userguide.html#sec_7_3_7>`_) for an explanation of these parameters.
+   See the ODE manual (chapter  `Joint Types and Functions - Contact <http://opende.sourceforge.net/wiki/index.php/Manual_%28Joint_Types_and_Functions%29#Contact>`_) for an explanation of these parameters.
 
    .. note::
 
@@ -120,10 +168,17 @@ torques to a rigid body.
 
 .. class:: ODEBodyManipulator
 
-   You get an instance of this class by calling the :meth:`createBodyManipulator`
+.. You get an instance of this class by calling the :meth:`createBodyManipulator`
    method of the :class:`ODEDynamics` component. One particular body manipulator
-   instance is always associated with one particular rigid body. A manipulator
-   object has the following attributes and methods:
+   instance is always associated with one particular rigid body. 
+..
+
+   You may get access to the manipulator of world object `obj` either 
+   using `obj.manip` field, or by calling `ODEDynamics.createBodyManipulator(obj)`.
+   One particular body manipulator
+   instance is always associated with one particular rigid body. 
+   
+   A manipulator object has the following attributes and methods:
 
 
 .. attribute:: ODEBodyManipulator.body
@@ -134,15 +189,41 @@ torques to a rigid body.
    component.
 
 
+
 .. attribute:: ODEBodyManipulator.odebody
 
-   This is the Body instance of the PyODE module. You can use this object if you
-   want to access special features of ODE that are not exposed otherwise. But note
-   that you won't get the expected results if you call methods like
-   :meth:`addForce` directly on the ODE body and you're using more than one sub
-   step in your simulation. The force would only be applied during the first sub
-   step because it is reset after each step. Use this manipulator class instead,
-   that's what it's for.
+    This is the Body instance of the PyODE module. You can use this object if you
+    want to access special features of ODE that are not exposed otherwise. But note
+    that you won't get the expected results if you call methods like
+    :meth:`addForce` directly on the ODE body and you're using more than one sub
+    step in your simulation. The force would only be applied during the first sub
+    step because it is reset after each step. Use this manipulator class instead,
+    that's what it's for.
+   
+    Example::
+   
+       odeSim = ODEDynamics()
+       s = Sphere()
+       odeSim.add(s)
+       # Set the kinematic flag on the sphere (i.e. not influenced by external forces)
+       s.manip.odebody.setKinematic()
+
+    ODE Rigid Body functions: <http://opende.sourceforge.net/wiki/index.php/Manual_(Rigid_Body_Functions)>
+    
+    PyODE Body API: <http://pyode.sourceforge.net/api-1.2.0/public/ode.Body-class.html>
+
+.. attribute:: ODEBodyManipulator.odegeoms
+
+    This is the list of GeomObject instances of the PyODE module. 
+   
+    Example::
+    
+        s.manip.odegeoms[0].getCollideBits()
+   
+    ODE Geom functions: <http://opende.sourceforge.net/wiki/index.php/Manual_(Collision_Detection)>
+    
+    PyODE GeomObject API: <http://pyode.sourceforge.net/api-1.2.0/public/ode.GeomObject-class.html>
+   
 
 .. % addForce
 
@@ -156,6 +237,9 @@ torques to a rigid body.
    also pass a different position in the *pos* argument which must describe a point
    in space. *relpos* determines if the point is given in object space or world
    space (default).
+   
+   The force is active only one simulation step (it behaves somewhat like an impulse).
+   If you want to apply a constant force, you have to specify it at every ``STEP_FRAME`` event.
 
 .. % addTorque
 
@@ -165,6 +249,9 @@ torques to a rigid body.
    Add an external torque to the current torque vector. *torque* is a vector
    containing the torque to apply. *reltorque* determines if the torque vector is
    given in object space or world space (default).
+
+   The torque is active only one simulation step. For constant torque, you have to 
+   specify it at every ``STEP_FRAME`` event.
 
 .. % setInitialPos
 
@@ -211,8 +298,12 @@ torques to a rigid body.
 
 .. method:: ODEBodyManipulator.setRot(rot)
 
-   Set the orientation of the body. *rot* must be a :class:`mat3` containing a
+   Set the orientation of the body. 
+   
+   *rot* is a :class:`mat3` containing a
    rotation matrix.
+   
+   *rot* may also be a list with 9 elements in row-major order.
 
 .. % setLinearVel
 
@@ -229,6 +320,15 @@ torques to a rigid body.
 
    Set the angular velocity of the body. *vel* must be a 3-sequence of floats
    containing the new velocity.
+
+.. note::
+    The methods :meth:`setPos`, :meth:`setRot`, :meth:`setLinearVel`, :meth:`setAngularVel`, :meth:`addForce` and :meth:`addTorque`
+    automatically wake up (enable) the associated body. 
+    This is very useful if you have set ``ODEDynamics.world.setAutoDisableFlag(True)`` 
+    and the manipulated body was stationary at the moment of call.
+    
+    The implementation calls PyODE's ``ode.Body.enable()``, which corresponds to ``void dBodyEnable(dBodyID)`` from ODE API.
+
 
 .. % ------------------------------------------------------
 
